--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ repositories {
 
 dependencies {
 
+    implementation project(':imvector')
     implementation project(':imclient')
+    //IM 通信使用ProtoBuf
+    implementation 'com.google.protobuf:protobuf-java:3.7.1'
 
     implementation 'io.netty:netty-all:4.1.33.Final'
     implementation 'org.springframework.boot:spring-boot-starter:2.1.3.RELEASE'
