--- a/imvector/build.gradle
+++ b/imvector/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 group 'com.imvector'
 version '1.0.0'
-sourceCompatibility = 11
+sourceCompatibility = "1.8"
 
 repositories {
     maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
@@ -37,7 +37,7 @@ publishing {
 }
 
 dependencies {
-    compileOnly 'io.netty:netty-all:4.1.33.Final'
-    compileOnly 'org.springframework.boot:spring-boot-starter:2.1.3.RELEASE'
+    implementation 'io.netty:netty-all:4.1.33.Final'
+    implementation 'org.springframework.boot:spring-boot-starter:2.1.3.RELEASE'
     testImplementation('org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE')
 }
